Refactored ImageBrowserViewModel.